@@ -38,6 +38,7 @@ Changes in 4.0beta2:
 - Fix handling of keep-alive in webinterface plugin (225167)
 - Don't open files to determine disk usage when files are not open
 - Change listen backlog to SOMAXCONN
+- Do preallocation properly (or not at all depending on settings) when file is recreated
 
 Changes in 4.0beta1:
 - Make adding multiple trackers at once possible (213194) 
